# iot_crockpot

./: .gitignore  CLAUDE.md  LICENSE  README.md  display_comparison.csv
docs/: assembly.md  display_options.md  hardware_decisions.md  telegram_setup.md  wiring.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/docs/: build-system.md
firmware/main/: CMakeLists.txt  crockpot.c  crockpot.h  display.c  display.h  display_hal.c  display_hal.h  gui.c  gui.h  interface_blynk.c  interface_blynk.h  main.c  relay.c  relay.h  telegram.c  telegram.h  temperature.c  temperature.h  touch_hal.c  touch_hal.h  wifi.c  wifi.h
hardware/: CYD PCB v8 v1.3mf  README.md  cyd_enclosure.scad  iot_crockpot.kicad_pcb  iot_crockpot.kicad_prl  iot_crockpot.kicad_pro  iot_crockpot.kicad_sch
hardware/3dmodels/: iot_crockpot.step
simulator/: .env.example  app.py  config_parser.py  crockpot_sim.py  datalog.py  gui_sim.py  main.py  remote_control.py  requirements.txt  schedule.py  telegram_bot.py  temperature_sim.py  tui.py  web_server.py
