idf_component_register(
    SRCS
        "main.c"
        "wifi.c"
        "crockpot.c"
        "temperature.c"
        "relay.c"
        "telegram.c"
        "display.c"
        "display_hal.c"
        "touch_hal.c"
        "gui.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_http_client
        esp-tls
        json
        driver
        esp_timer
)
